--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
 
      
-        <label for="lname">EFTERNAMN</label>
+        <label for="lastname">EFTERNAMN</label>
         <input id="lname" name="lname"
         type="text"
             required
